cabal-version:      2.4
name:               plutus-starter
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0
license-files: LICENSE

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities -rtsopts
      -- See Plutus Tx readme
      -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      Smartchain.Contract.CLAP.MonetaryPolicy.ScriptFileGenerator
      Smartchain.Contract.CLAP.MonetaryPolicy.Trace
      Smartchain.Contract.CLAP.MonetaryPolicy
    build-depends:
      base >= 4.9 && < 5,
      lens,
      aeson,
      text,
      time,
      freer-simple,
      data-default,
      unordered-containers,
      bytestring,
      containers,
      cardano-api,
      cardano-ledger-alonzo,
      plutus-ledger-api,
      serialise,
      freer-extras,
      playground-common,
      plutus-use-cases,
      plutus-contract,
      plutus-tx-plugin,
      plutus-tx,
      plutus-ledger
    hs-source-dirs: src 

test-suite smartchain-tests
  import: lang
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  other-modules:
    Smartchain.Contract.CLAP.MonetaryPolicySpec
  build-depends:
    plutus-tx -any,
    plutus-tx-plugin,
    plutus-contract -any,
    plutus-ledger -any,
    plutus-starter -any
  build-depends:
    base >=4.9 && <5,
    tasty -any,
    tasty-hunit -any,
    tasty-hedgehog >=0.2.0.0,
    freer-simple -any
