cabal-version:      2.4
name:               tokenomia
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0
license-files: LICENSE

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities -rtsopts
      -- See Plutus Tx readme
      -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      Tokenomia.CLI
      Tokenomia.ICO.AddressesGeneration
      Tokenomia.Node.Status
      Tokenomia.Token.CLAPStyle.Mint
      Tokenomia.Token.CLAPStyle.Burn
      Tokenomia.Token.CLAPStyle.MonetaryPolicy
      Tokenomia.Wallet.CLI
      Tokenomia.Wallet.Collateral.Write
      Tokenomia.Wallet.Collateral.Read
      Tokenomia.Ada.Transfer
      Tokenomia.Common.Error
      Tokenomia.Token.Transfer
      Tokenomia.Vesting.Contract
      Tokenomia.Vesting.Repository
      Tokenomia.Vesting.Vest
      Tokenomia.Vesting.Retrieve
      Tokenomia.Tokenomic.CLAP.Simulation
      Tokenomia.Adapter.Cardano.CLI.UTxO
      Tokenomia.Adapter.Cardano.CLI.Value
      Tokenomia.Adapter.Cardano.CLI.Serialise
      Tokenomia.Adapter.Cardano.CLI.Node
      Tokenomia.Adapter.Cardano.CLI.Transaction
      Tokenomia.Adapter.Cardano.CLI.Folder
      Tokenomia.Adapter.Cardano.CLI.Scripts
      Tokenomia.Adapter.Cardano.CLI.Wallet
      Tokenomia.Common.Shell.InteractiveMenu
      Tokenomia.Common.Shell.Console
      Tokenomia.Adapter.Cardano.CLI.Environment
      Tokenomia.Adapter.Cardano.CLI.Data
      Tokenomia.Adapter.Cardano.CLI.UTxO.Query
      Tokenomia.Adapter.Cardano.Types
    build-depends:
      base >= 4.9 && < 5,
      lens,
      aeson,
      text,
      time,
      mtl,
      shh,
      split,
      directory,
      random,
      exceptions,
      utf8-string,
      freer-simple,
      data-default,
      iso8601-time,
      unordered-containers,
      ouroboros-consensus,
      bytestring,
      containers,
      cardano-api,
      cardano-cli,
      cardano-ledger-alonzo,
      plutus-ledger-api,
      serialise,
      freer-extras,
      playground-common,
      plutus-contract,
      plutus-tx-plugin,
      plutus-tx,
      plutus-ledger
    hs-source-dirs: src 

test-suite tokenomia-tests
  import: lang
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  other-modules:
    Spec.Tokenomia.Token.CLAPStyle.MonetaryPolicy
    Spec.Tokenomia.Vesting.Contract
    Spec.Tokenomia.Adapter.Cardano.CLI.UTxO
    Spec.Tokenomia.Adapter.Cardano.CLI.Value
  build-depends:
    plutus-tx -any,
    plutus-tx-plugin,
    plutus-contract -any,
    plutus-ledger -any,
    plutus-ledger-api,
    tokenomia -any
  build-depends:
    base >=4.9 && <5,
    tasty -any,
    tasty-hunit -any,
    tasty-hedgehog >=0.2.0.0,
    freer-simple -any,
    bytestring,
    text,
    interpolatedstring-perl6,
    data-default


executable tokenomia-cli 
  import: lang
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options:
    -threaded
  build-depends:
    base >= 4.9 && < 5,
    tokenomia

executable addresses-generator 
  import: lang
  main-is: AddressesGenerator.hs
  hs-source-dirs: app
  ghc-options:
    -threaded
  build-depends:
    base >= 4.9 && < 5,
    tokenomia