cabal-version:      2.4
name:               tokenomia
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0
license-files: LICENSE

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities
      -Wcompat -Wmissing-export-lists
      -Wmissing-deriving-strategies
      -Wno-orphans
      -- See Plutus Tx readme
      -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      Tokenomia.Ada.Transfer
      Tokenomia.CLI
      Tokenomia.CardanoApi.Arbitrary.Slot
      Tokenomia.CardanoApi.Arbitrary.Time
      Tokenomia.CardanoApi.Fees
      Tokenomia.CardanoApi.FromPlutus.Error
      Tokenomia.CardanoApi.FromPlutus.Time
      Tokenomia.CardanoApi.FromPlutus.Value
      Tokenomia.CardanoApi.PParams
      Tokenomia.CardanoApi.Query
      Tokenomia.CardanoApi.Time
      Tokenomia.CardanoApi.Value
      Tokenomia.Common.Address
      Tokenomia.Common.Aeson.AssetClass
      Tokenomia.Common.Arbitrary.AssetClass
      Tokenomia.Common.Arbitrary.Builtins
      Tokenomia.Common.Arbitrary.Modifiers
      Tokenomia.Common.Arbitrary.POSIXTime
      Tokenomia.Common.Arbitrary.Slot
      Tokenomia.Common.Arbitrary.Utils
      Tokenomia.Common.Arbitrary.Value
      Tokenomia.Common.Arbitrary.Wallet
      Tokenomia.Common.Asset
      Tokenomia.Common.AssetClass
      Tokenomia.Common.Blockfrost
      Tokenomia.Common.Data.ByteString
      Tokenomia.Common.Data.Convertible
      Tokenomia.Common.Data.Either.Extra
      Tokenomia.Common.Data.List.Extra
      Tokenomia.Common.Data.List.NonEmpty
      Tokenomia.Common.Datum
      Tokenomia.Common.Environment
      Tokenomia.Common.Environment.Query
      Tokenomia.Common.Error
      Tokenomia.Common.Folder
      Tokenomia.Common.Hash
      Tokenomia.Common.Node
      Tokenomia.Common.PageNumber 
      Tokenomia.Common.Parser
      Tokenomia.Common.Parser.Address
      Tokenomia.Common.Parser.AssetClass
      Tokenomia.Common.Parser.MinRequiredUTxO
      Tokenomia.Common.Parser.TxOutDatumHash
      Tokenomia.Common.Parser.TxOutRef
      Tokenomia.Common.Parser.Utxo
      Tokenomia.Common.Parser.Value
      Tokenomia.Common.Serialise
      Tokenomia.Common.Shell.Console
      Tokenomia.Common.Shell.InteractiveMenu
      Tokenomia.Common.Time
      Tokenomia.Common.Token 
      Tokenomia.Common.Transacting
      Tokenomia.Common.TxOutRef
      Tokenomia.Common.Value
      Tokenomia.ICO.Balanceable
      Tokenomia.ICO.Funds.Exchange.CardanoCLI.Command
      Tokenomia.ICO.Funds.Exchange.CardanoCLI.Convert
      Tokenomia.ICO.Funds.Exchange.CardanoCLI.Transact
      Tokenomia.ICO.Funds.Exchange.Command
      Tokenomia.ICO.Funds.Exchange.Plan
      Tokenomia.ICO.Funds.Exchange.Plan.Settings
      Tokenomia.ICO.Funds.Exchange.ReceivedFunds
      Tokenomia.ICO.Funds.Exchange.Run
      Tokenomia.ICO.Funds.Exchange.Tokens
      Tokenomia.ICO.Funds.Validation.CardanoCLI.Command
      Tokenomia.ICO.Funds.Validation.CardanoCLI.Convert
      Tokenomia.ICO.Funds.Validation.CardanoCLI.Datum
      Tokenomia.ICO.Funds.Validation.CardanoCLI.Plan
      Tokenomia.ICO.Funds.Validation.CardanoCLI.Transact
      Tokenomia.ICO.Funds.Validation.ChildAddress.State
      Tokenomia.ICO.Funds.Validation.ChildAddress.Types
      Tokenomia.ICO.Funds.Validation.Investor.Command
      Tokenomia.ICO.Funds.Validation.Investor.Plan
      Tokenomia.ICO.Funds.Validation.Investor.Plan.Settings
      Tokenomia.ICO.Funds.Validation.Run
      Tokenomia.ICO.Funds.Validation.Simulation.Transfer
      Tokenomia.ICO.Funds.Validation.Status
      Tokenomia.ICO.Funds.WhiteListing.Repository
      Tokenomia.ICO.Funds.WhiteListing.Types
      Tokenomia.ICO.LocalRepository
      Tokenomia.ICO.Round.Settings
      Tokenomia.ICO.Status
      Tokenomia.Node.Status
      Tokenomia.Script.ChainIndex
      Tokenomia.Script.LocalRepository
      Tokenomia.Script.UTxO
      Tokenomia.Token.CLAPStyle.Burn
      Tokenomia.Token.CLAPStyle.Mint
      Tokenomia.Token.CLAPStyle.MonetaryPolicy
      Tokenomia.Token.Transfer
      Tokenomia.TokenDistribution.CLI
      Tokenomia.TokenDistribution.CLI.Parameters
      Tokenomia.TokenDistribution.CLI.Parser
      Tokenomia.TokenDistribution.Distribution
      Tokenomia.TokenDistribution.Main
      Tokenomia.TokenDistribution.Parser.Address
      Tokenomia.TokenDistribution.PreValidation
      Tokenomia.TokenDistribution.Split.EstimateFees
      Tokenomia.TokenDistribution.Split.SplitAdaSource
      Tokenomia.TokenDistribution.Split.SplitDistribution
      Tokenomia.TokenDistribution.Split.SplitTokenSource
      Tokenomia.TokenDistribution.Transfer
      Tokenomia.TokenDistribution.Wallet.ChildAddress.ChainIndex
      Tokenomia.TokenDistribution.Wallet.ChildAddress.ChildAddressRef
      Tokenomia.TokenDistribution.Wallet.ChildAddress.LocalRepository
      Tokenomia.Tokenomic.CLAP.Simulation
      Tokenomia.Vesting.Contract
      Tokenomia.Vesting.GenerateNative
      Tokenomia.Vesting.Repository
      Tokenomia.Vesting.Retrieve
      Tokenomia.Vesting.Sendings
      Tokenomia.Vesting.Vest
      Tokenomia.Wallet.CLI
      Tokenomia.Wallet.ChildAddress.ChainIndex
      Tokenomia.Wallet.ChildAddress.ChildAddressRef
      Tokenomia.Wallet.ChildAddress.LocalRepository
      Tokenomia.Wallet.Collateral.Read
      Tokenomia.Wallet.Collateral.Write
      Tokenomia.Wallet.LocalRepository
      Tokenomia.Wallet.LocalRepository.Folder
      Tokenomia.Wallet.Type
      Tokenomia.Wallet.UTxO
      Tokenomia.Wallet.WalletUTxO
    build-depends:
      base >= 4.9 && < 5,
      Cabal,
      Unique,
      aeson,
      async,
      attoparsec,
      base16-bytestring,
      blockfrost-api,
      blockfrost-client,
      blockfrost-client-core,
      blockfrost-pretty,
      bytestring,
      cardano-api,
      cardano-cli,
      cardano-ledger-alonzo,
      cardano-ledger-byron,
      cardano-ledger-core,
      cardano-ledger-shelley,
      cardano-slotting,
      composition,
      composition-extra,
      containers,
      data-default,
      deepseq,
      directory,
      either,
      errors,
      exceptions,
      extra,
      filepath,
      freer-extras,
      freer-simple,
      hashable,
      hex,
      hex-text,
      iso8601-time,
      lens,
      lifted-base,
      memory,
      mtl,
      nonempty-containers,
      optparse-applicative,
      ordered-containers,
      ouroboros-consensus,
      ouroboros-network,
      playground-common,
      plutus-chain-index,
      plutus-chain-index-core,
      plutus-contract,
      plutus-core,
      plutus-ledger,
      plutus-ledger-api,
      plutus-ledger-api,
      plutus-ledger-constraints,
      plutus-script-utils,
      plutus-tx,
      plutus-tx-plugin,
      pretty-simple,
      prettyprinter,
      quickcheck-instances,
      random,
      safe-money,
      serialise,
      shh,
      split,
      streamly,
      tasty-quickcheck,
      text,
      time,
      transformers,
      transformers-except,
      unordered-containers,
      utf8-string
    hs-source-dirs: src 

test-suite tokenomia-tests
  import: lang
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  other-modules:
    Spec.Tokenomia.CardanoApi.Fees
    Spec.Tokenomia.CardanoApi.FromPlutus.Value
    Spec.Tokenomia.Common.Arbitrary.Builtins
    Spec.Tokenomia.Common.Arbitrary.Utils
    Spec.Tokenomia.Common.Data.List.Extra
    Spec.Tokenomia.Common.Parser.Address
    Spec.Tokenomia.Common.Time
    Spec.Tokenomia.Common.Value
    Spec.Tokenomia.ICO.Funds.Exchange.GenInputs
    Spec.Tokenomia.ICO.Funds.Exchange.Plan
    Spec.Tokenomia.ICO.Funds.Validation.CardanoCLI.GenInputs
    Spec.Tokenomia.ICO.Funds.Validation.CardanoCLI.Plan
    Spec.Tokenomia.ICO.Funds.Validation.Investor.GenInputs
    Spec.Tokenomia.ICO.Funds.Validation.Investor.Plan
    Spec.Tokenomia.Token.CLAPStyle.MonetaryPolicy
    Spec.Tokenomia.Vesting.Contract
    Spec.Tokenomia.Vesting.GenerateNative
    Spec.Tokenomia.Vesting.Sendings
    Spec.Tokenomia.Wallet.UTxO
  build-depends:
    plutus-tx -any,
    plutus-tx-plugin,
    plutus-contract -any,
    plutus-ledger -any,
    plutus-ledger-api,
    tokenomia -any,
    mtl
  build-depends:
    base >=4.9 && <5,
    QuickCheck,
    blockfrost-api,
    blockfrost-client,
    bytestring,
    cardano-api,
    composition-extra,
    containers,
    data-default,
    either,
    freer-simple -any,
    hex,
    interpolatedstring-perl6,
    nonempty-containers,
    ordered-containers,
    ouroboros-consensus,
    quickcheck-instances,
    random,
    safe-money,
    tasty -any,
    tasty-hedgehog >=0.2.0.0,
    tasty-hunit -any,
    tasty-quickcheck,
    text,
    time


executable tokenomia-cli 
  import: lang
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options:
    -threaded
  build-depends:
    base >= 4.9 && < 5,
    tokenomia

executable token-distribution
  import: lang
  main-is: Main.hs
  hs-source-dirs: app/TokenDistribution
  ghc-options:
    -threaded
  build-depends:
    base >= 4.9 && < 5,
    tokenomia
